src/objects/Account_Relationship__c.object
<CustomObject>
    <fields>
        <fullName>From_Account__c</fullName>
        <label>From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships (From Account)</relationshipLabel>
        <relationshipName>Account_Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>From_Role__c</fullName>
        <label>From Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Primary Account Holder</fullName>
                </value>
                <value>
                    <fullName>Estate</fullName>
                </value>
                <value>
                    <fullName>Beneficiary</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Referee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>To_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>To Account</label>
        <lookupFilter>
            <active>false</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>You must select an Individual/Person Account</errorMessage>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>0122F0000000BXm</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>0122F0000000BPO</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Relationships (To Account)</relationshipLabel>
        <relationshipName>Account_Relationships_To</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>To_Role__c</fullName>
        <label>To Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Power of Attorney</fullName>
                </value>
                <value>
                    <fullName>Executor</fullName>
                </value>
                <value>
                    <fullName>Trustee</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Referrer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Relationship</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AR-{000000}</displayFormat>
        <label>Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_Self_reference</fullName>
        <active>true</active>
        <description>Validation rule to prevent an Account Relationship From and To the same Account.</description>
        <errorConditionFormula>AND($Profile.Name = &quot;AE User&quot;, From_Account__c = To_Account__c)</errorConditionFormula>
        <errorMessage>You cannot create a Relationship from an Account to itself.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_2_business_accounts</fullName>
        <active>true</active>
        <description>You cannot create an Account Relationship between 2 non-person accounts</description>
        <errorConditionFormula>AND(
NOT(From_Account__r.IsPersonAccount),
NOT(To_Account__r.IsPersonAccount)
)</errorConditionFormula>
        <errorMessage>You cannot create an Account Relationship between two business-type Accounts</errorMessage>
    </validationRules>
</CustomObject>